# GraphicComputing

./: ._XML  README.md
XML/: ._SisSolar.xml  ._boneco_de_neve.xml  ._cone.3d  ._sphere.3d  ._sphere.xml  sphere.xml
source/: ._CMakeLists.txt  CMakeLists.txt
source/Engine/: ._Controls.hpp  ._Group.cpp  ._Group.hpp  ._Light.cpp  ._Primitive.cpp  ._Rotate.cpp  ._XMLParser.cpp  ._XMLParser.hpp  ._main.cpp  ._tinyxml2.h  Controls.hpp  Group.cpp  Group.hpp  Light.cpp  Primitive.cpp  XMLParser.cpp  XMLParser.hpp  main.cpp
source/XMLGenerator/: ._main.cpp  main.cpp
